k8s/clusters/duckiesays/manifests.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: duckiesays
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: duckiesays
  namespace: duckiesays
spec:
  replicas: 1
  selector:
    matchLabels:
      app: duckiesays
  template:
    metadata:
      labels:
        app: duckiesays
    spec:
      containers:
      - name: duckiesays
        image: docker.io/cadeon924/duckiesays:v24
        ports:
        - containerPort: 3000
        resources:
          limits:
            cpu: "1"
            memory: "1Gi"
          requests:
            cpu: "500m"
            memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: duckiesays
  namespace: duckiesays
spec:
  selector:
    app: duckiesays
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: duckiesays
  namespace: duckiesays
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/websocket-services: "duckiesays"
spec:
  tls:
  - hosts:
    - duckiesays.k8s.not-really.me
    secretName: k8s-not-really-me-tls
  - hosts:
    - duckiesays.com
    - www.duckiesays.com
    secretName: duckiesays-com-tls
  rules:
  - host: duckiesays.k8s.not-really.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: duckiesays
            port:
              number: 80
  - host: duckiesays.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: duckiesays
            port:
              number: 80
  - host: www.duckiesays.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: duckiesays
            port:
              number: 80
